docs/v1.3.0/en/api/core-extra/AgentSaveData.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `AgentSaveData`
- [← Area / Back to core-extra](./)
- [↑ API Index](../)
- [🏠 Home v1.3.0](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# AgentSaveData

**Namespace:** TaleWorlds.Core
**Module:** TaleWorlds.Core
**Type:** `public struct AgentSaveData`
**Base:** none
**File:** `TaleWorlds.Core/AgentSaveData.cs`

## Overview

`AgentSaveData` behaves like a data carrier: it packages fields so systems can exchange state in a structured form.

## Mental Model

Treat `AgentSaveData` as a Data-style extension point: first identify who creates it, who owns it, and who calls it, then decide whether you should subclass it, compose it, or only read from it.

## Key Methods

### UpdateSpawnFrame
`public void UpdateSpawnFrame(MatrixFrame spawnFrame)`

**Purpose:** Updates the state or data of `spawn frame`.

### AutoGeneratedStaticCollectObjectsAgentSaveData
`public static void AutoGeneratedStaticCollectObjectsAgentSaveData(object o, List<object> collectedObjects)`

**Purpose:** Handles logic related to `auto generated static collect objects agent save data`.

## Usage Example

```csharp
var value = new AgentSaveData();
```

## See Also

- [Complete Class Catalog](../catalog)